--- a/boards/shields/temper/temper.conf
+++ b/boards/shields/temper/temper.conf
@@ -1,2 +1,10 @@
-# Uncomment the following line to enable deep sleep
+# Use higher power BT for better connection
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable deep sleep support (default n)
 CONFIG_ZMK_SLEEP=y
+
+# Milliseconds of inactivity before entering deep sleep (default 900000)
+# from: https://github.com/zmkfirmware/zmk/issues/1273
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
