--- a/boards/shields/temper/temper.conf
+++ b/boards/shields/temper/temper.conf
@@ -4,7 +4,12 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Enable deep sleep support (default n)
 CONFIG_ZMK_SLEEP=y
 
-# Milliseconds of inactivity before entering deep sleep (default 900000)
-# from: https://github.com/zmkfirmware/zmk/issues/1273
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# Milliseconds of inactivity before entering deep sleep
+# 5 minutes = 300000ms
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
+
+# Battery report interval (30 minutes)
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
+
+# Disable OLED
+CONFIG_ZMK_DISPLAY=n
