--- a/boards/shields/temper/temper.conf
+++ b/boards/shields/temper/temper.conf
@@ -13,3 +13,31 @@ CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
 
 # Disable OLED
 CONFIG_ZMK_DISPLAY=n
+
+# Deep Sleep & Power Management
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_PM=y
+CONFIG_PM_DEVICE=y
+CONFIG_PM_DEVICE_RUNTIME=y
+
+# Battery reporting
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
+
+# Bluetooth configurations
+CONFIG_BT_CTLR_TX_PWR_PLUS_4=y
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
+CONFIG_BT_CTLR_LOW_LAT=n
+CONFIG_BT_CTLR_LLL_PREF=n
+
+# Disable features not in use
+CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
+
+# Additional power saving
+CONFIG_ZMK_SLEEP_DEEP_MS=900000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_BT_MAX_CONN=3
