--- a/boards/shields/temper/temper.conf
+++ b/boards/shields/temper/temper.conf
@@ -1,43 +1,49 @@
-# Use higher power BT for better connection
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Enable deep sleep support (default n)
+# Basic power management
 CONFIG_ZMK_SLEEP=y
-
-# Milliseconds of inactivity before entering deep sleep
-# 5 minutes = 300000ms
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
-
-# Battery report interval (30 minutes)
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
-
-# Disable OLED
-CONFIG_ZMK_DISPLAY=n
-
-# Deep Sleep & Power Management
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
 CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
+
+# Nordic SoC specific power management
+CONFIG_SOC_POWER_MANAGEMENT=y
 CONFIG_PM=y
 CONFIG_PM_DEVICE=y
-CONFIG_PM_DEVICE_RUNTIME=y
+CONFIG_PM_DEEP_SLEEP=y
+CONFIG_PM_DEEP_SLEEP_STATES=y
 
-# Battery reporting
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
-
-# Bluetooth configurations
+# Bluetooth configurations - conservative approach
+CONFIG_BT_MAX_CONN=1
 CONFIG_BT_CTLR_TX_PWR_PLUS_4=y
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=30
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=50
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=5
 CONFIG_BT_CTLR_LOW_LAT=n
-CONFIG_BT_CTLR_LLL_PREF=n
 
-# Disable features not in use
+# Battery reporting - less frequent to save power
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=3600
+
+# Completely disable all display and LED features
 CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=n
 CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_WS2812_STRIP=n
+CONFIG_LED=n
+CONFIG_LED_GPIO=n
+CONFIG_ZMK_BACKLIGHT=n
+CONFIG_PWM=n
+CONFIG_PWM_LED_STRIP=n
 
-# Additional power saving
-CONFIG_ZMK_SLEEP_DEEP_MS=900000
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_BT_MAX_CONN=3
+# Additional power saving features
+CONFIG_SENSOR=n
+CONFIG_GPIO_SHELL=n
+CONFIG_SERIAL=n
+CONFIG_UART_CONSOLE=n
+CONFIG_USB_UART_CONSOLE=n
+CONFIG_SHELL=n
+CONFIG_SHELL_BACKEND_SERIAL=n
+CONFIG_UART_LINE_CTRL=n
+CONFIG_USB_CDC_ACM=n
+CONFIG_USB_CDC_ACM_UART=n
+
+# Debug options - uncomment if needed
+# CONFIG_ZMK_USB_LOGGING=y
