power: ultra-aggressive power optimization for Temper keyboard
- Minimize power consumption with extreme Bluetooth settings
- Force deep sleep mode with strict Nordic nRF52840 power management
- Disable all non-essential features and peripherals
- Enable USB logging for potential debugging

--- a/boards/shields/temper/temper.conf
+++ b/boards/shields/temper/temper.conf
@@ -1,49 +1,41 @@
-# Basic power management
+# Minimal power management configuration
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
 
-# Nordic SoC specific power management
+# Nordic nRF52840 specific sleep configurations
 CONFIG_SOC_POWER_MANAGEMENT=y
 CONFIG_PM=y
 CONFIG_PM_DEVICE=y
+CONFIG_POWEROFF=y
+CONFIG_SYS_PM_STATE_LOCK=y
+CONFIG_SYS_PM_MIN_RESIDENCY_SLEEP_1=2000
+CONFIG_SYS_PM_MIN_RESIDENCY_SLEEP_2=2000
+
+# Force deep sleep mode
 CONFIG_PM_DEEP_SLEEP=y
 CONFIG_PM_DEEP_SLEEP_STATES=y
+CONFIG_PM_STATE_LOCK_ENABLE=y
 
-# Bluetooth configurations - conservative approach
+# Bluetooth - absolute minimum power
 CONFIG_BT_MAX_CONN=1
-CONFIG_BT_CTLR_TX_PWR_PLUS_4=y
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=30
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=50
-CONFIG_BT_PERIPHERAL_PREF_LATENCY=5
+CONFIG_BT_CTLR_TX_PWR_MINUS_20=y
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=100
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=200
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=10
 CONFIG_BT_CTLR_LOW_LAT=n
+CONFIG_BT_CTLR_LLL_PREF=n
+CONFIG_BT_HCI_VS=n
 
-# Battery reporting - less frequent to save power
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=3600
-
-# Completely disable all display and LED features
-CONFIG_ZMK_DISPLAY=n
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=n
+# Disable everything else
 CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_WS2812_STRIP=n
+CONFIG_ZMK_DISPLAY=n
 CONFIG_LED=n
-CONFIG_LED_GPIO=n
-CONFIG_ZMK_BACKLIGHT=n
 CONFIG_PWM=n
-CONFIG_PWM_LED_STRIP=n
-
-# Additional power saving features
-CONFIG_SENSOR=n
-CONFIG_GPIO_SHELL=n
 CONFIG_SERIAL=n
 CONFIG_UART_CONSOLE=n
 CONFIG_USB_UART_CONSOLE=n
 CONFIG_SHELL=n
-CONFIG_SHELL_BACKEND_SERIAL=n
-CONFIG_UART_LINE_CTRL=n
-CONFIG_USB_CDC_ACM=n
-CONFIG_USB_CDC_ACM_UART=n
 
-# Debug options - uncomment if needed
-# CONFIG_ZMK_USB_LOGGING=y
+# Enable USB logging for debugging
+CONFIG_ZMK_USB_LOGGING=y
