new power config

--- a/boards/shields/temper/temper.conf
+++ b/boards/shields/temper/temper.conf
@@ -1,27 +1,34 @@
 # Minimal power management configuration
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
+CONFIG_ZMK_IDLE_TIMEOUT=15000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=60000
 
 # Nordic nRF52840 specific sleep configurations
 CONFIG_SOC_POWER_MANAGEMENT=y
 CONFIG_PM=y
 CONFIG_PM_DEVICE=y
-CONFIG_POWEROFF=y
-CONFIG_SYS_PM_STATE_LOCK=y
-CONFIG_SYS_PM_MIN_RESIDENCY_SLEEP_1=2000
-CONFIG_SYS_PM_MIN_RESIDENCY_SLEEP_2=2000
+CONFIG_PM_DEVICE_RUNTIME=y
 
 # Force deep sleep mode
+CONFIG_POWEROFF=y
+CONFIG_SYS_POWER_MANAGEMENT=y
+CONFIG_SYS_POWER_DEEP_SLEEP_STATES=y
+CONFIG_SYS_PM_STATE_LOCK=y
+CONFIG_SYS_PM_DIRECT_FORCE_MODE=y
+CONFIG_PM_DEVICE_POWER_DOMAIN=y
+
+# Sleep states configuration
 CONFIG_PM_DEEP_SLEEP=y
 CONFIG_PM_DEEP_SLEEP_STATES=y
-CONFIG_PM_STATE_LOCK_ENABLE=y
+CONFIG_SYS_PM_MIN_RESIDENCY_SLEEP_1=500
+CONFIG_SYS_PM_MIN_RESIDENCY_SLEEP_2=500
 
 # Bluetooth - absolute minimum power
 CONFIG_BT_MAX_CONN=1
 CONFIG_BT_CTLR_TX_PWR_MINUS_20=y
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=100
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=200
-CONFIG_BT_PERIPHERAL_PREF_LATENCY=10
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=200
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=400
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=15
 CONFIG_BT_CTLR_LOW_LAT=n
 CONFIG_BT_CTLR_LLL_PREF=n
 CONFIG_BT_HCI_VS=n
